<resources>
    <string name="app_name">WallPaperApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="photos">Photos</string>
    <string name="collections">Collections</string>
    <string name="favoriler">Favoriler</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="Kategoriler">Kategoriler</string>
    <string name="Fotoğraflar">Fotoğraflar </string>
    <string name="favoriTxt">Favoriniz Bulunmamaktadır</string>
    <string name="buttonLogin">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="btn_reset">Reset</string>
    <string name="resetmessage">By clicking RESET, you will receive an email to reset your password</string>
    <string name="forgotpassword">Forgot you password?</string>
    <string name="logout">Logout</string>


</resources>
